# cocktail_robot

./: README.md  pyproject.toml
src/: api.py  configure.py  main.py  util.py
src/cocktail_24/: cocktail_management.py  cocktail_planning.py  cocktail_robo.py  cocktail_robot_interface.py  cocktail_runtime.py  cocktail_system.py  recipe_samples.py  robo.py
src/cocktail_24/cocktail/: cocktail_api.py  cocktail_bookkeeping.py  cocktail_recipes.py  dummy_events.py  openai_recipes.py
src/cocktail_24/planning/: cocktail_planner.py  cocktail_planning.py
src/cocktail_24/pump_interface/: pump_interface.py
src/cocktail_24/robot_interface/: robocall_ringbuffer.py  robot_interface.py  robot_operations.py
tests/: main.py  test_cocktail_planning.py  test_performance.py  test_ringbuffer.py  test_robocom.py
