[project]
name = "cocktail_24"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MTh", email = "-"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
]
